--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,15 @@
+@font-face {
+  font-family: 'Gotham Book';
+  src: url('./fonts/Gotham-Book.eot');
+  src: url('./fonts/Gotham-Book.eot?#iefix') format('embedded-opentype'),
+      url('./fonts/Gotham-Book.woff2') format('woff2'),
+      url('./fonts/Gotham-Book.woff') format('woff'),
+      url('./fonts/Gotham-Book.ttf') format('truetype'),
+      url('./fonts/Gotham-Book.svg#Gotham-Book') format('svg');
+  font-weight: 500;
+  font-style: normal;
+}
+
 *{
   margin: 0;
   padding: 0;
@@ -6,9 +18,7 @@
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Gotham Book', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   /*Custom Code*/
