--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,10 @@
   box-sizing: border-box;
 }
 
+a{
+  text-decoration: none;
+}
+
 body {
   margin: 0;
   font-family: 'Gotham-Book', 'Helvetica Neue', sans-serif;
