--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,17 @@
   font-weight: 500;
   font-style: normal;
 }
+@font-face {
+  font-family: 'Gotham-Black';
+  src: url('./fonts/GothamBlack.eot');
+  src: url('./fonts/GothamBlack.eot?#iefix') format('embedded-opentype'),
+      url('./fonts/GothamBlack.woff2') format('woff2'),
+      url('./fonts/GothamBlack.woff') format('woff'),
+      url('./fonts/GothamBlack.ttf') format('truetype'),
+      url('./fonts/GothamBlack.svg#GothamBlack') format('svg');
+  font-weight: 900;
+  font-style: normal;
+}
 
 *{
   margin: 0;
