--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+/* FONTS */
+@import url("https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap");
 @font-face {
   font-family: 'Gotham-Book';
   src: url('./fonts/Gotham-Book.eot');
