--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,23 @@
 
 .container .page{
   position: absolute;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
+  background: black;
+}
+
+.page-enter{
+  transform: translate3d(0, 100%, 0);
+}
+.page-enter-active{
+  transform: translate3d(0, 0, 0);
+  transition: transform 800ms ease-out;
+  /* transition-delay: 600ms; */
+}
+.page-exit{
+  transform: translate3d(0, 0, 0);
+}
+.page-exit-active{
+  transform: translate3d(0, 100%, 0);
+  transition: transform 800ms ease-out;
 }
