--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,8 @@
   position: relative;
   width: 100vw;
   height: 100vh;
+  max-height: 100vh;
+  overflow: hidden;
 }
 
 .container .page{
@@ -34,6 +36,7 @@
   width: 100%;
   height: 100%;
   background: black;
+
 }
 
 .page-enter{
