--- a/src/index.css
+++ b/src/index.css
@@ -31,26 +31,48 @@
   overflow: hidden;
 }
 
-.container .page{
+.container .mainTransition{
   position: absolute;
   width: 100%;
   height: 100%;
   background: black;
-
 }
 
-.page-enter{
+.container .contactTransition{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
+.mainTransition-enter{
   transform: translate3d(0, 100%, 0);
 }
-.page-enter-active{
+.mainTransition-enter-active{
   transform: translate3d(0, 0, 0);
   transition: transform 800ms ease-out;
   /* transition-delay: 600ms; */
 }
-.page-exit{
+.mainTransition-exit{
   transform: translate3d(0, 0, 0);
 }
-.page-exit-active{
+.mainTransition-exit-active{
   transform: translate3d(0, 100%, 0);
+  transition: transform 800ms ease-out;
+}
+
+
+.contactTransition-enter{
+  transform: translate3d(-100%, 0, 0);
+}
+.contactTransition-enter-active{
+  transform: translate3d(0, 0, 0);
+  transition: transform 800ms ease-out;
+  /* transition-delay: 600ms; */
+}
+.contactTransition-exit{
+  transform: translate3d(0, 0, 0);
+}
+.contactTransition-exit-active{
+  transform: translate3d(-100%, 0, 0);
   transition: transform 800ms ease-out;
 }
