--- a/src/index.css
+++ b/src/index.css
@@ -76,3 +76,13 @@
   transform: translate3d(-100%, 0, 0);
   transition: transform 800ms ease-out;
 }
+
+#root {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  background: #171720;
+}
